--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -56,6 +56,12 @@
     max-height: 100px;
     margin: auto;
 }
+.logo_mobile {
+    display: none;
+}
+.number_mobile {
+    display: none;
+}
 .search{
     background-color: transparent;
     height: 64px;
@@ -511,7 +517,7 @@ ul:after {
 .imagelego {
     height: 300px;
     width: 100%;
-    background: url("/static/shop/img/konstruktor.png") no-repeat;
+    background: url("/static/shop/img/konstruktor.png") center center no-repeat;
 }
 .top{
     height: 210px;
@@ -575,6 +581,13 @@ ul:after {
     border: none;
     background: transparent;
     border-bottom: 1px solid white;
+    color:white;
+    text-decoration: none;
+    outline: none;
+}
+.revers_commun:focus{
+    text-decoration: none;
+    outline: 0;
 }
 .revers_commun input::-webkit-input-placeholder {color:white;}
 .revers_commun input::-moz-placeholder {color:white;}/* Firefox 19+ */
@@ -585,6 +598,7 @@ ul:after {
     background: transparent;
     height: 16px;
     padding: 0!important;
+    outline: none;
 }
 .revers_commun p {
     text-decoration: underline white;
@@ -820,8 +834,7 @@ ul:after {
 
 .close {
     height: 15px;
-    margin-right: 15px;
-    margin-top: 15px;
+    margin-top: 20px;
     float: right;
     opacity: .2;
 }
@@ -839,27 +852,26 @@ ul:after {
 }
 
 .window{
-    width: 320px;
-    height: 285px;
+    width: 400px;
+    height: auto;
     float:left;
-    margin-left: 40px;
+    padding: 40px 40px;
     text-align: center;
-    margin-top: 15px;
 }
 .name {
     height: 50px;
-    width: 400px;
+    width: 320px;
     display: block;
     text-align: left;
 }
-.name h1{
-   margin-top: 0;
+.name h3{
+    display: inline-block;
+    margin-top: 20px!important;
 }
 .divide{
     height: 1px;
     width: 100%;
     background-color: grey;
-    float: left;
     opacity: 0.5;
     display: block;
     margin: 0!important;
@@ -873,6 +885,7 @@ ul:after {
     display: block;
     float:left;
 }
+
 .content{
     text-align: left;
 }
@@ -893,6 +906,7 @@ ul:after {
     margin-bottom: 0;
     margin-top: 20px;
 }
+
 .counter{
     width: 72px;
     height: 30px;
@@ -1003,7 +1017,7 @@ float:left;
 border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 }
 .flover_block{
-/*width: 500px;*/
+width: 500px;
 height: 100px;
 float:left;
 text-align: left;
@@ -1054,8 +1068,58 @@ outline: none;
 background-color: transparent;
 display: inline-block;
 }
+.counter_basket2 {
+width: 72px;
+height: 30px;
+border: 1px solid rgba(128, 128, 128, 0.5);
+border-radius: 15px;
+float: left;
+}
+
+.counter_basket2 input{
+width: 25px;
+padding: 0;
+height: 25px;
+border: none;
+outline: none;
+display: inline-block;
+}
+.counter_basket2 button {
+width: 20px;
+height: 30px;
+padding: 0;
+border: none;
+outline: none;
+background-color: transparent;
+display: inline-block;
+}
+.counter_basket3 {
+width: 72px;
+height: 30px;
+border: 1px solid rgba(128, 128, 128, 0.5);
+border-radius: 15px;
+float: left;
+}
+
+.counter_basket3 input{
+width: 25px;
+padding: 0;
+height: 25px;
+border: none;
+outline: none;
+display: inline-block;
+}
+.counter_basket3 button {
+width: 20px;
+height: 30px;
+padding: 0;
+border: none;
+outline: none;
+background-color: transparent;
+display: inline-block;
+}
 .count_flover{
-/*width: 155px;*/
+width: 155px;
 height: 100px;
 float:left;
 text-align: left;
@@ -1066,7 +1130,7 @@ margin-bottom: 0;
 margin-top: 15px;
 }
 .sum_inf{
-/*width: 135px;*/
+width: 135px;
 float:left;
 }
 .sum_inf p{
@@ -1430,23 +1494,152 @@ height: 10px;
     text-align: center;
 }
 
-@media screen and (max-width: 980px) {
-    .basket_full_main{
-    width: 100%!important;
-    height: auto;
+.catalog_for_flover{
+    width: 890px;
+    height: 890px;
     padding: 45px 40px;
-    text-align: center;
-    background-color: white;
-    position: fixed;
-	top: 45%;
-	left: 0;
-	margin-top: -297px;
-	margin-left: 0;
-	display: none;
-	opacity: 0;
-	z-index: 9998;
 }
-    .block_info_flover{
-        height: 300px;
-    }
+.catalog_for_flover_content{
+    width: 100%;
+    height: auto;
+}
+.top_catalog_flover{
+    width: 100%;
+    height: 60px;
+}
+.info_top_catalog_flover{
+    width: 50%;
+    height: 60px;
+    float: left;
+    margin:0;
+}
+.info_top_catalog_flover h3{
+    margin-bottom: 0!important;
+    margin-top: 0!important;
+}
+.info_top_catalog_flover p{
+    margin-top: 0!important;
+    margin-bottom: 0!important;
+}
+.categor_list_content{
+    width: 50%;
+    height: 60px;
+    float: left;
+    padding-top: 10px;
+}
+.add_in_lego_flover img{
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    margin-top: 30px;
+}
+.add_in_lego_flover{
+    vertical-align: middle!important;
+    width: 100px;
+    height: 100%;
+    float:right;
+    text-align: center;
+}
+.change_packing{
+    width:50%;
+    height: 100px;
+    float:left;
+}
+.packaging2 {
+    width: 150px;
+    height: 100px;
+    float:left;
+    text-align: center;
+}
+.packaging2 p{
+    display: block;
+    text-align: left;
+    margin-bottom: 10px;
+
+}
+.packaging2 select {
+    display: block;
+    width: 150px;
+    padding: 0;
+    height: 30px;
+    border: 1px solid black;
+    outline: none;
+    border-radius: 15px;
+}
+.packaging2 option{
+
+}
+.block_info_search2{
+    width: 100%;
+    height:100px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+}
+.basket_lego_main{
+    width: 890px;
+    height: 890px;
+    padding: 45px 40px;
+    margin-top: 40px;
+}
+.basket_lego_main_top h3{
+    margin-top: 0!important;
+    margin-bottom: 0!important;
+
+}
+.basket_lego_main_top p{
+    margin-bottom: 0!important;
+}
+.basket_lego_main_top img{
+    height: 15px;
+    width: 15px;
+    float:right;
+    margin-top: -40px;
+}
+.basket_lego_main_top{
+    height:60px;
+    width: 100%;
+}
+.search_block2{
+    width: 600px;
+    height: 100px;
+    float:left;
+    text-align: left;
+}
+.search_block2 img{
+    width: 100px;
+    height: 80px;
+    display: block;
+    float:left;
+    margin-top: 10px;
+}
+.search_block2 p{
+    display: block;
+    margin-bottom: 0;
+    padding-left: 130px;
+    margin-top: 5px;
+}
+.search_block2 h4 {
+    display: block;
+    margin-bottom: 0;
+    padding-left: 130px;
+    margin-top: 25px;
+}
+.footer_lego_flover{
+    height: 150px;
+    width: 100%;
+    text-align: right;
+}
+.footer_lego_flover p{
+    padding-top: 20px;
+
+}
+.add_in_basket{
+    height: 30px;
+    border-radius: 15px;
+    border: 1px solid #b85778;
+    width: 150px;
+    float:right;
+    text-align: center;
+    padding-top: 3px!important;
+    color:white;
+    background-color: #b85778;
 }
