--- a/shop/templates/shop/infoflower_input.html
+++ b/shop/templates/shop/infoflower_input.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 <head>
+    <link rel="stylesheet" href="{% static 'shop/css/media_style.css' %}">
+
     <script src="{% static 'shop/js/popup_card.js' %}"></script>
     <script src="{% static 'shop/js/add_to_basket.js' %}"></script>
     <script src="{% static 'shop/js/get_package_list.js' %}"></script>
@@ -7,16 +9,24 @@
 </head>
 
 <img src="{{ product_info.photo.url }}">
-    <div class="close_card close" id="close_card"><img src="{% static 'shop/img/krest.png' %}"></div>
-    <div class="window">
-        <div class="name"><h3>{{ product_info.name }}</h3></div>
+        <div class="window">
+        <div class="name"><h3>{{ product_info.name }}</h3>
+        <div class="close_card close" id="close_card"><img src="{% static 'shop/img/krest.png' %}"></div>
         <div class="divide"></div>
         <div class="content">
-            <p>Страна:Голландия</p>
-            <div class="sale"><p>{{ product_info.price }} р/шт</p>
-            <img src="{% static 'shop/img/sale.png' %}">
-            <p>-10%</p>
-            </div>
+            {% if product_info.attribute %}
+                <p>Страна: {{ product_info.attribute.county }}</p>
+                <p>Длина: {{ product_info.attribute.length }} см</p>
+            {% endif %}
+            {% if sale_price %}
+                <div class="sale"><p class="price_in_info">{{ product_info.price }}</p><p class="sale_price_in_info">&nbsp{{ sale_price }} Руб/шт</p>
+                <img src="{% static 'shop/img/sale.png' %}">
+                <p>-{{ product_info.sale_promo.percent }}%</p>
+                </div>
+            {% else %}
+                <div class="sale"><p class="price_in_info">{{ product_info.price }} Руб/шт</p>
+                </div>
+            {% endif %}
             <div class="window_info"><p>{{ product_info.description }}</p>
             </div>
             <div class="order_counter">
